--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f4f4f9;
+            background: linear-gradient(0deg, #408080 0%, #400040 100%);
             color: #333;
             text-align: center;
             transition: background-color 0.3s, color 0.3s;
