--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
 
 <h1>
     pipiQuiz - Arkadaşlık Testi
-    <a id="github-link" href="https://github.com/kullaniciadi/repoadi" target="_blank">
-        <img src="images/github-icon.png" alt="GitHub">
+    <a id="github-link" href="https://github.com/fiatcoupe20vturbo/pipiQuiz" target="_blank">
+        <img src="images/github.png" alt="GitHub">
     </a>
 </h1>
 
