--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
     function toggleTheme() {
         document.body.classList.toggle('dark');
         const themeIcon = document.getElementById('theme-icon');
-        themeIcon.src = document.body.classList.contains('dark') ? 'images/moon.png' : 'images/sun.png'; // Düzeltildi
+        themeIcon.src = document.body.classList.contains('dark') ? 'images/moon.png' : 'images/sun.png';
     }
 
     document.addEventListener("DOMContentLoaded", checkAnswers);
