--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
             max-width: 600px;
             margin: auto;
             padding: 20px;
-            background: rgba(255, 255, 255, 0.9); /* Yumuşak beyaz arka plan */
+            background: rgba(255, 255, 255, 0.9);
             border-radius: 10px;
-            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2); /* Daha belirgin gölge */
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
             margin-top: 20px;
             transition: background 0.3s;
         }
         body.dark #quiz, body.dark #share-link, body.dark #guess-section {
-            background: rgba(50, 50, 50, 0.9); /* Karanlık mod arka planı */
+            background: rgba(50, 50, 50, 0.9);
         }
         button {
             padding: 10px 20px;
