--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
         document.body.classList.toggle('dark');
         document.body.classList.toggle('white');
         const themeIcon = document.getElementById('theme-icon');
-        themeIcon.src = document.body.classList.contains('dark') ? 'images/moon.png' : 'images/sun.png';
+        themeIcon.src = document.body.classList.contains('dark') ? 'images/sun.png' : 'images/moon.png';
     }
 
     document.addEventListener("DOMContentLoaded", checkAnswers);
