--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 </h1>
 
 <button id="theme-toggle" onclick="toggleTheme()">
-    <img id="theme-icon" src="images/moon.png" alt="Tema Değiştir">
+    <img id="theme-icon" src="images/moond.png" alt="Tema Değiştir">
 </button>
 
 <div id="quiz">
